RESOLVED FIXED211969
[iOS] Unexpected capitalization of next word after repositioning caret
https://bugs.webkit.org/show_bug.cgi?id=211969
Summary [iOS] Unexpected capitalization of next word after repositioning caret
Wenson Hsieh
Reported 2020-05-15 15:19:59 PDT
Attachments
Patch (15.45 KB, patch)
2020-05-15 15:46 PDT, Wenson Hsieh
no flags
Patch (17.01 KB, patch)
2020-05-15 17:11 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-05-15 15:46:58 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2020-05-15 17:11:49 PDT
Wenson Hsieh
Comment 3 2020-05-18 08:16:04 PDT
Comment on attachment 399530 [details] Patch Thanks for the review!
EWS
Comment 4 2020-05-18 08:23:13 PDT
Committed r261812: <https://trac.webkit.org/changeset/261812> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399530 [details].
Note You need to log in before you can comment on or make changes to this bug.